tests/error/loop_not_int.gw
// [contains] loop * conditionnal must be of type 'int'
complex c;
repeat(c)
	<<<"error">>>;
